<resources>
    <string name="app_name">NetEase Music</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="login_with_mobile">Login with mobile</string>
    <string name="register">Register</string>
    <string name="password_hint">Password</string>
    <string name="mobile_number_hint">Mobile number</string>
    <string name="login">Login</string>
    <string name="mobile_number">Mobile number</string>
    <string name="password">Password</string>
    <string name="login_error">Login error</string>
    <string name="i_know">I konw</string>
    <string name="inbox">Inbox</string>
    <string name="friends">Friends</string>
    <string name="nearby">Nearby</string>
    <string name="communicate">Communicate</string>
    <string name="special_mode">特别聆听模式</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="local_music">Local music</string>
    <string name="recent_play">Recent play</string>
    <string name="manage_downloads">Manage downloads</string>
    <string name="stations">Stations</string>
    <string name="favs">Favs</string>
    <string name="sati">Sati空间</string>
    <string name="local_files">Local files</string>
    <string name="single">Single</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string name="folder">Folder</string>
    <string name="network_error">Network error</string>
    <string name="songs">songs</string>
    <string name="permission_storage_ration">This app need Storage Permission. Some feature will not work if you DENY</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="searching_local_file">Searching local files</string>
    <string name="share">Share</string>
    <string name="top_comments">Top comments</string>
    <string name="latest_comments">Latest comments</string>
    <string name="commment">Comment</string>
    <string name="search">Search</string>
    <string name="hot_search">Hot search</string>
    <string name="history_record">历史纪录</string>
    <string name="video">Video</string>
    <string name="hot">Hot</string>Performance
    <string name="contact">Contact</string>
    <string name="radio">Radio</string>
    <string name="suggest">Suggest</string>
    <string name="look_live">LOOK直播</string>
    <string name="live">直播</string>
    <string name="cover">翻唱</string>
    <string name="bgm">听BGM</string>
    <string name="mv">MV</string>
    <string name="dance">舞蹈</string>
    <string name="acg_music">ACG音乐</string>
    <string name="performance">演奏</string>
    <string name="video_top">视频榜</string>
    <string name="priviate_fm">私人FM</string>
    <string name="daily_recommendation">每日推荐</string>
    <string name="song_list">歌单</string>
    <string name="ranking">排行榜</string>
    <string name="recommended_song_list">推荐歌单</string>
    <string name="multi_pick">Multi-pick</string>
    <string name="downlaod">Downlaod</string>
    <string name="latest_music">最新音乐</string>
    <string name="incorrect_password">密码不正确</string>
    <string name="account_not_exists">帐号不存在</string>
    <string name="try_password_limit">密码错误超过限制</string>
    <string name="play_all">Play all</string>
    <string name="tracks">tracks</string>
</resources>
