<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inbox"
            app:actionLayout="@layout/menu_counter"
            android:icon="@drawable/ic_nav_inbox"
            android:title="@string/inbox" />
        <!--VIP TODO -->

    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_friend"
                android:icon="@drawable/ic_nav_friend"
                android:title="@string/friends" />
            <item
                android:id="@+id/nav_nearby"
                android:icon="@drawable/ic_nav_nearby"
                android:title="@string/nearby" />
        </menu>
    </item>

</menu>
