<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="30dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_fm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/shortcut_fm"
            tools:src="@drawable/shortcut_fm" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priviate_fm"
            android:textColor="@color/dark"
            tools:text="@string/priviate_fm" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_daily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/shortcut_fm"
            tools:src="@drawable/shortcut_fm" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daily_recommendation"
            android:textColor="@color/dark"
            tools:text="@string/daily_recommendation" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_song_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/shortcut_fm"
            tools:src="@drawable/shortcut_fm" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/song_list"
            android:textColor="@color/dark"
            tools:text="@string/song_list" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_ranking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/shortcut_fm"
            tools:src="@drawable/shortcut_fm" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ranking"
            android:textColor="@color/dark"
            tools:text="排行榜" />
    </LinearLayout>
</LinearLayout>